--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,12 +12,19 @@ html, body{
     width: 100vw;
     background-color: black;
 }
-
+ 
+body{
+    background: url('../imagens/fundo-madeira.jpg')
+    no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
 
 main{
     height: 100vh;
     position: relative;
-    background-color: green;
+ 
 }
 
 section#telefone {
@@ -25,7 +32,9 @@ section#telefone {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 500px;
-    width: 500px;
-    background-color: aliceblue;
+    height: 627px;
+    width: 311px;
+    background-image: url('../imagens/frame-iphone.png');
 }
+
+
